--- a/config/config-single-client-dev.yml
+++ b/config/config-single-client-dev.yml
@@ -1,5 +1,5 @@
 data:
-  env: localhost-dev-edit1239
+  env: localhost-dev-edit
   user:
     username: fengzheng-dev999
     password: password-dev
