--- a/config/config-single-client-dev.yml
+++ b/config/config-single-client-dev.yml
@@ -1,5 +1,5 @@
 data:
-  env: localhost-dev-edit
+  env: localhost-dev-edit34253
   user:
     username: fengzheng-dev222
     password: password-dev
