--- a/config/config-single-client-dev.yml
+++ b/config/config-single-client-dev.yml
@@ -1,35 +1,24 @@
 server:
-  port: 8088
+  port: 8089
 
 spring:
   application:
-    name: config-server
+    name: config-single-client
   cloud:
     config:
-      server:
-        git:
-          uri: https://github.com/sky-xiao/config-only-a-demo
-          username: 15574814866@163.com
-          password: xky18627315127@
-          default-label: master
-          search-paths: config
+      uri: http://localhost:8088/
+      profile: dev
+      label: master
   rabbitmq:
     host: 47.106.131.191
     port: 5672
     username: admin
     password: 123456
 
-#SpringCloud 1.5版本暴露接口，暴露/bus-refresh接口
-management:
-  security:
-    enabled: false
-    #SpringCloud 2.0.0版本以后暴露接口方式
-    endpoints:
-      web:
-        exposure:
-          include: "*"
-
-#是否开启基本的鉴权，默认为true
 security:
   basic:
     enabled: false
+
+custom:
+  username: guest-new
+  passwd: guest-new
