--- a/config/config-single-client-dev.yml
+++ b/config/config-single-client-dev.yml
@@ -1,6 +1,13 @@
 server:
   port: 8089
-
+management:
+  endpoint:
+    shutdown:
+      enabled: false
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 spring:
   application:
     name: config-single-client
