--- a/config/config-single-client-dev.yml
+++ b/config/config-single-client-dev.yml
@@ -1,5 +1,3 @@
-server:
-  port: 8089
 management:
   endpoint:
     shutdown:
@@ -23,6 +21,11 @@ spring:
     port: 5672
     username: admin
     password: 123456
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:7001/eureka/
 
 security:
   basic:
